# musicum-tauri

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TASKS.md  musicum-tauri.code-workspace  nx.json
.claude/skills/execute-plan/: SKILL.md
.claude/skills/ideate/: SKILL.md
.claude/skills/review-design/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.claude/skills/write-plan/: SKILL.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  output.rs  settings.rs
apps/cli/src/commands/: clips.rs  collections.rs  completions.rs  export.rs  files.rs  mod.rs  play.rs  presets.rs  presets_editor.rs  processor_list_editor.rs  processors.rs  sync.rs
docs/: 2026-05-22-tauri-greenfield-setup.md
docs/plans/: 2026-05-23-01-workspace-and-core-skeleton.md  2026-05-23-02-database-layer.md  2026-05-23-03-sidecar-and-sync-service.md  2026-05-23-04-cli.md  2026-05-24-cli-create-clip.md  2026-05-24-structural-processor-cli-design.md  2026-05-25-cli-unified-output.md  2026-05-25-cli-unified-table.md  2026-05-25-processor-list-editor.md  2026-05-25-structural-processor-cursor-redesign.md  2026-05-25-structural-processor-pipeline-playback.md  2026-05-26-annotations-and-deletions.md  2026-05-26-library-structure-config.md  2026-05-26-sync-verbose-output.md  2026-05-27-audio-plugin-engine-integration.md  2026-05-27-export-command.md  2026-05-27-remove-clip-caching.md  2026-05-28-audio-plugin-cli-integration.md  2026-05-28-plugin-registry-refactor.md  2026-05-29-collection-player.md  2026-05-29-collections-cli.md  2026-05-29-player-redesign.md  2026-05-29-shell-completion.md  2026-05-30-sync-speedup.md
docs/plans/specs/: 2026-05-22-tauri-greenfield-setup.md  2026-05-24-cli-create-clip-design.md  2026-05-24-cli-player-pipeline-design.md  2026-05-24-structural-processor-cli-design.md  2026-05-25-cli-unified-output.md  2026-05-25-cli-unified-table.md  2026-05-25-processor-list-editor-design.md  2026-05-25-structural-processor-cursor-redesign.md  2026-05-25-structural-processor-pipeline-playback.md  2026-05-26-annotations-and-deletions-design.md  2026-05-26-library-structure-config-design.md  2026-05-26-sync-verbose-output-design.md  2026-05-27-audio-plugin-engine-integration-design.md  2026-05-27-export-command-design.md  2026-05-27-remove-clip-caching-design.md  2026-05-28-audio-plugin-cli-integration-design.md  2026-05-28-plugin-registry-refactor-design.md  2026-05-29-collection-player-design.md  2026-05-29-collections-cli-design.md  2026-05-29-player-redesign-design.md  2026-05-29-shell-completion-design.md  2026-05-30-sync-speedup-design.md
libs/audio-plugin-sdk/: Cargo.toml  README.md  project.json
libs/audio-plugin-sdk/js/: eslint.config.js  package-lock.json  package.json
libs/audio-plugin-sdk/js/src/: analyzer.test.ts  analyzer.ts  audio-parser.ts  index.ts  plugin-loader.test.ts  plugin-loader.ts  plugin-manager.ts  types.ts  worklet-processor.js
libs/audio-plugin-sdk/src/: analyzer.rs  binary.rs  lib.rs  parameters.rs  plugin.rs  registry.rs  tests.rs
libs/audio-plugins/: README.md  build-native.sh  build.sh  project.json  test.sh
libs/audio-plugins/gain/: Cargo.toml
libs/audio-plugins/gain/src/: ap_main.rs  lib.rs  main.rs
libs/audio-plugins/level-meter/: Cargo.toml  renderer.js
libs/audio-plugins/level-meter/src/: ap_main.rs  lib.rs  main.rs
libs/audio-plugins/normalize/: Cargo.toml
libs/audio-plugins/normalize/src/: ap_main.rs  lib.rs  main.rs
libs/audio-plugins/oscilloscope/: Cargo.toml  renderer.js
libs/audio-plugins/oscilloscope/src/: ap_main.rs  lib.rs  main.rs
libs/audio-plugins/pan/: Cargo.toml
libs/audio-plugins/pan/src/: ap_main.rs  lib.rs  main.rs
libs/audio-plugins/reverb/: Cargo.toml
libs/audio-plugins/reverb/src/: ap_main.rs  lib.rs  main.rs
libs/musicum-core/: Cargo.toml
libs/musicum-core/src/: config.rs  edit.rs  error.rs  lib.rs  sidecar.rs
libs/musicum-core/src/audio/: mod.rs  player.rs  processor_chain.rs  queue.rs  registry.rs  source.rs
libs/musicum-core/src/db/: mod.rs  schema.rs
libs/musicum-core/src/db/entities/: clip.rs  collection.rs  collection_clip.rs  file.rs  file_attachment.rs  file_metadata.rs  mod.rs  preset.rs
libs/musicum-core/src/services/: clip_service.rs  collection_service.rs  export_service.rs  file_service.rs  mod.rs  preset_service.rs  sync_service.rs
libs/musicum-core/tests/: clip_service.rs  db_schema.rs  preset_service.rs  sidecar_processor_entry.rs  sync_service.rs
libs/musicum-core/tests/common/: mod.rs
libs/structural-processor-sdk/: Cargo.toml  README.md
libs/structural-processor-sdk/js/: README.md  package-lock.json  package.json
libs/structural-processor-sdk/js/src/: index.ts  loader.ts  manager.test.ts  manager.ts  types.ts
libs/structural-processor-sdk/src/: chain.rs  lib.rs  processor.rs  source.rs
libs/structural-processors/: Cargo.toml  README.md  build.sh  project.json  test.sh
libs/structural-processors/src/: lib.rs  main.rs
libs/structural-processors/src/processors/: crop.rs  cut.rs  mod.rs  slice.rs  trim.rs
