[package]
name = "structural-processors"
version = "0.1.0"
edition = "2021"
description = "Musicum structural processor implementations (WASM + native binary)"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "structural-processor"
path = "src/main.rs"

[dependencies]
structural-processor-sdk = { path = "../structural-processor-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hound = "3"
