[package]
name = "pan"
version = "0.1.0"
edition = "2021"
description = "Pan and stereo width audio plugin for Musicum"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pan-descriptor"
path = "src/main.rs"

[[bin]]
name = "ap-pan"
path = "src/ap_main.rs"

[dependencies]
audio-plugin-sdk = { path = "../../audio-plugin-sdk" }
