[package]
name = "reverb"
version = "0.1.0"
edition = "2021"
description = "Reverb audio plugin for Musicum"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "reverb-descriptor"
path = "src/main.rs"

[[bin]]
name = "ap-reverb"
path = "src/ap_main.rs"

[dependencies]
audio-plugin-sdk = { path = "../../audio-plugin-sdk" }
